# PyR0

./: .gitignore  CLAUDE.md  COMPOSITION_GUIDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  NOTICE  README.md  VERIFICATION_ADDED.md  docs.md  pyproject.toml  run_all_tests.sh  test_build_guest.py  test_composition.py  test_import.py  test_real_composition.py  test_real_verification.py  test_receipt_api.py  test_security_verification.py  test_verify_api.py
.cargo/: config.toml
demo/: MERKLE_ZKP_README.md  ed25519_demo.py  merkle_demo.py  merkle_zkp_demo.py  real_ed25519_test.py  risc0_ed25519_demo.py
demo/ed25519_demo_guest/src/: main.rs
demo/merkle_proof_guest/: Cargo.toml
demo/merkle_proof_guest/src/: main.rs
demo/risc0_ed25519_demo_guest/: Cargo.toml
examples/: verify_proof.py
merkle/: Cargo.toml  pyproject.toml
merkle/src/: lib.rs  merkle.rs
merkle/src/merkle_py/: __init__.py
src/: claim.rs  composer.rs  executor_env.rs  image.rs  input_builder.rs  lib.rs  receipt.rs  segment.rs  serialization.rs  session.rs  succinct.rs  verifier.rs
src/pyr0/: __init__.py  __init__.pyi  _rust.pyi  build.py  exceptions.py  serialization.py  serialization.pyi
test/: build_ed25519_verifier.sh  dask_test.py  ed25519_guest_example.rs  ed25519_test.py  ed25519_verifier.elf  extract_ed25519_elf.py  real_ed25519_test.py  test_api_invariants.py  test_build_guest.py  test_cbor_serialization.py  test_composer_api.py  test_composition.py  test_import.py  test_input_builder.py  test_merkle_zkp.py  test_minimal_verify.py  test_real_verification.py  test_receipt_api.py  test_security_verification.py  test_verification.py  test_verify_api.py
test_cbor_guest/: Cargo.toml
test_cbor_guest/src/: main.rs
test_composition_guest/: Cargo.toml
test_composition_guest/src/: main.rs
test_inner_guest/: Cargo.toml
test_inner_guest/src/: main.rs
test_outer_guest/: Cargo.toml
test_outer_guest/src/: main.rs
