[workspace]

[package]
name = "pyr0"
version = "0.1.0"
edition = "2021"

[lib]
name = "pyr0"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module", "anyhow"] }
risc0-zkvm = { version = "1.2", features = ["prove", "disable-dev-mode"] }
risc0-zkvm-platform = { version = "1.2" }
risc0-binfmt = { version = "1.2" }
anyhow = "1.0.79"
serde = "1.0"
bincode = "1.3.3"
hex = "0.4"

[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
lto = true

[profile.release.build-override]
opt-level = 3

[features]
default = []
metal = ["risc0-zkvm/metal"]
cuda = ["risc0-zkvm/cuda"]