[package]
name = "merkle_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "merkle_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
sparse-merkle-tree = { version = "0.6" }
poseidon-bn128 = "0.1.1"
scalarff = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"

[workspace]