[package]
name = "merkle-proof-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2", default-features = false, features = ["std"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true

[profile.release.build-override]
opt-level = 3