[package]
name = "merkle-proof-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2", default-features = false, features = ["std"] }
sha2 = "0.10"
borsh = { version = "1.5", default-features = false, features = ["derive"] }

[profile.release]
opt-level = 3
lto = true

[profile.release.build-override]
opt-level = 3